<resources>
    <string name="app_name" translatable="false">Flux</string>
    <string name="back">Back</string>
    <string name="auto">Auto Brightness</string>
    <string name="edit">Rename</string>
    <string name="onoff">Lamp is</string>
    <string name="toggleL">Toggle Lamp</string>

    <string name="cardDesign">Tap to see the advanced controls of this lamp.</string>

    <string name="enab">Enabled</string>
    <string name="disab">Disabled</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="photo">Add Image</string>
    <string name="reset">Reset</string>
    <string name="about">About FLUX</string>
    <string name="image_success">Tap anywhere on the image to set color.</string>

    <string name="rename">Rename Lamp</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="tapedit">Tap to rename.</string>

    <string name="rem">Remove</string>
    <string name="rem_title">Are you sure you want to remove this lamp?</string>
    <string name="rem_desc">This action is irreversible.</string>
    <string name="Y">Yes</string>
    <string name="N">No</string>


    <string name="github">See GitHub Page</string>
    <string name="erbaa" translatable="false">P</string>
    <string name="about_text">
    <![CDATA[
        FLUX\n\n
        v1.0 \n\n

        Developed for ISE414 Project. \n\n

        Adil Çolak - CMPE \n
        İbrahim Kaan Bilir - CMPE \n\n

        Distributed under MIT license.\n
    ]]>
    </string>

    <string name="addLamp">Add Lamp</string>
    <string name="welcome"><b>Welcome to FLUX</b></string>
    <string name="desc">
    <![CDATA[
        At the moment there is no lamp paired.\n\n
        Tap here to pair your first Flux lamp.
    ]]>
    </string>
    <string name="lamp">Lamp</string>
    <string name="bt_popup_title">Permission Required for Bluetooth</string>
    <string name="bt_settings">GO TO SETTINGS</string>
    <string name="exit">EXIT</string>

</resources>