<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_LC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LampControl">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_LC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
        android:id="@+id/brightnessSlide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_LC"
        app:selector_BrightnessSlider="@drawable/colorpickerview_wheel" />

    <Button
        android:id="@+id/back_LC"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:text="@string/back"
        android:textSize="0sp"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_LC"
        app:layout_constraintStart_toStartOf="@+id/toolbar_LC"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_LC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:textColorLink="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_LC"
        app:layout_constraintStart_toEndOf="@+id/back_LC"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/toggle_LC"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/onoff"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_LC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_LC">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="20dp"
            app:contentPadding="30dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.skydoves.colorpickerview.ColorPickerView
                    android:id="@+id/colorPickerView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginBottom="20dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Switch
            android:id="@+id/autoBrightness"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/auto"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>